--- a/styles/styleindex.css
+++ b/styles/styleindex.css
@@ -132,7 +132,7 @@ header{
 }
 .modal{
 	width: 60%;
-	height: 80%;
+	height: 85%;
 	left: 20%;
 	top:10%;
 	padding: 30px 20px;
@@ -149,20 +149,24 @@ header{
 	width: 80%;
 	text-align: justify;
 	margin-left: 10%;
+	padding-top: 40px;
 }
 
 .cm{
 	position: fixed;
+	width: 3vw;
+	height: 3vw;
 	top:12%;
-	right: 22%;
+	right: 48.5vw;
 	font-family: "Arial",sans-serif;
 	font-size: 2rem;
 	font-weight: bold;
 	padding-bottom: 5px;
 	border: none;
+	border-radius: 50%;
 	color: rgba(50,50,50,0.8);
 	cursor: pointer;
-	background-color: rgba(0,0,0,0);
+	background-color: rgba(250,250,250,.8);
 }
 .cm:hover {
 	color: rgba(200,0,0,1);
