--- a/styles/styleindex.css
+++ b/styles/styleindex.css
@@ -130,6 +130,14 @@ header{
 	box-shadow: none;
 	font-size: 1.3rem;
 }
+#telon{
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,.6);
+	display: none;
+}
 .modal{
 	width: 60%;
 	height: 85%;
@@ -154,10 +162,10 @@ header{
 
 .cm{
 	position: fixed;
-	width: 3vw;
-	height: 3vw;
-	top:12%;
-	right: 48.5vw;
+	width: 5vw;
+	height: 5vw;
+	top:2%;
+	right: 10%;
 	font-family: "Arial",sans-serif;
 	font-size: 2rem;
 	font-weight: bold;
