--- a/styles/styleramas.css
+++ b/styles/styleramas.css
@@ -61,7 +61,7 @@
 	margin-top: 20px;
 	padding-bottom: 20px;
 	border-bottom: 1px solid gray;
-	flex-wrap: wrap;
+	/*flex-wrap: wrap;*/
 }
 .logosection{
 	display: flex;
@@ -77,7 +77,7 @@
 .basico{
 	display: flex;
 	flex-direction: column;	
-	width: auto;
+	width: 50%;
 	height: auto;
 	justify-content:center;
 	padding: 15px;
